welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:1: error: not found: type int
def nexcase(k:int):Int ={var x= getX()
              ^