welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.code
def finpos():Boolean = {return ((getMondeHauteur()-1 == getX() && (getMondeLargeur() -1== getY())))}
def nexcase(k:int):Int ={var x= getX()
              var y = getY()
              if ((x==getMondeLargeur()-1&&k>0)||(x==0&&k<1)) {y=y+1;x=0;k = k* -1} else x=x+k
              setPos(x,y)
              return k}



override def run() {var c=0
                    var k = 1
                    while (!finpos()) {ecritMessage(c.toString);k = nexcase(k);c+=1}
                    ecritMessage(c.toString)
}